--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    flavorDimensions"default"
+    productFlavors{
+        free{
+
+        }
+        premium{
+
+        }
+    }
 }
 
 dependencies {
